Used onclick to make the code shorter

--- a/index.html
+++ b/index.html
@@ -17,22 +17,22 @@
                 <p id="displayText">0</p>
             </div>
             <div class="buttons">
-                <button id="zero"  class="calc-button">0</button>
-                <button id="square"  class="calc-button">x^2</button>
-                <button id="divide"  class="calc-button">/</button>
-                <button id="multiply"  class="calc-button">*</button>
-                <button id="one"  class="calc-button">1</button>
-                <button id="two"  class="calc-button">2</button>
-                <button id="three"  class="calc-button">3</button>
-                <button id="plus"  class="calc-button">+</button>
-                <button id="four"  class="calc-button">4</button>
-                <button id="five"  class="calc-button">5</button>
-                <button id="six"  class="calc-button">6</button>
-                <button id="minus"  class="calc-button">-</button>
-                <button id="seven" class="calc-button">7</button>
-                <button id="eight" class="calc-button">8</button>
-                <button id="nine" class="calc-button">9</button>
-                <button id="equals" class="calc-button">=</button>
+                <button onclick="putNumberOnScreen(0);" id="zero"  class="calc-button">0</button>
+                <button onclick="putNumberOnScreen('square');" id="square"  class="calc-button">x^2</button>
+                <button onclick="putNumberOnScreen('divide');" id="divide"  class="calc-button">/</button>
+                <button onclick="putNumberOnScreen('multiply');" id="multiply"  class="calc-button">*</button>
+                <button onclick="putNumberOnScreen(1);" id="one"  class="calc-button">1</button>
+                <button onclick="putNumberOnScreen(2);" id="two"  class="calc-button">2</button>
+                <button onclick="putNumberOnScreen(3);" id="three"  class="calc-button">3</button>
+                <button onclick="putNumberOnScreen('+');" id="plus"  class="calc-button">+</button>
+                <button onclick="putNumberOnScreen(4);" id="four"  class="calc-button">4</button>
+                <button onclick="putNumberOnScreen(5);" id="five"  class="calc-button">5</button>
+                <button onclick="putNumberOnScreen(6);" id="six"  class="calc-button">6</button>
+                <button onclick="putNumberOnScreen('-');" id="minus"  class="calc-button">-</button>
+                <button onclick="putNumberOnScreen(7);" id="seven" class="calc-button">7</button>
+                <button onclick="putNumberOnScreen(8);" id="eight" class="calc-button">8</button>
+                <button onclick="putNumberOnScreen(9);" id="nine" class="calc-button">9</button>
+                <button onclick="putNumberOnScreen('=');" id="equals" class="calc-button">=</button>
             </div>
         </div>
     </div>
